java part of having configurations which components can have AI