@@ -1,24 +1,10 @@
 package com.composum.ai.backend.slingbase.impl;
 
-import java.security.Principal;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
-import java.util.Objects;
-import java.util.Set;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
-import javax.jcr.RepositoryException;
-import javax.jcr.Session;
 
-import org.apache.jackrabbit.api.JackrabbitSession;
-import org.apache.jackrabbit.api.security.user.Authorizable;
-import org.apache.jackrabbit.api.security.user.Group;
-import org.apache.jackrabbit.api.security.user.User;
-import org.apache.jackrabbit.api.security.user.UserManager;
 import org.apache.sling.api.SlingHttpServletRequest;
 import org.osgi.framework.Constants;
 import org.osgi.service.component.annotations.Activate;
@@ -31,10 +17,11 @@ import org.slf4j.LoggerFactory;
 
 import com.composum.ai.backend.base.service.chat.GPTConfiguration;
 import com.composum.ai.backend.slingbase.AIConfigurationPlugin;
+import com.composum.ai.backend.slingbase.model.GPTPermissionConfiguration;
 
 /**
  * The {@code OsgiAIConfigurationPluginImpl} class is the default implementation of the {@link AIConfigurationPlugin} interface.
- * This implementation sources its configurations from the OSGI environment, specifically from instances of {@link OsgiAIConfiguration}.
+ * This implementation sources its configurations from the OSGI environment, specifically from instances of {@link GPTPermissionConfiguration}.
  *
  * <p>
  * The primary responsibility of this class is to determine which AI services are allowed based on various parameters such as:
@@ -61,21 +48,21 @@ import com.composum.ai.backend.slingbase.AIConfigurationPlugin;
  * </p>
  *
  * @see AIConfigurationPlugin
- * @see OsgiAIConfiguration
+ * @see GPTPermissionConfiguration
  */
 @Component(
         property = Constants.SERVICE_RANKING + ":Integer=2000"
 )
-@Designate(ocd = OsgiAIConfiguration.class, factory = true)
+@Designate(ocd = GPTPermissionConfiguration.class, factory = true)
 public class OsgiAIConfigurationPluginImpl implements AIConfigurationPlugin {
 
     private static final Logger LOG = LoggerFactory.getLogger(OsgiAIConfigurationPluginImpl.class);
 
-    private OsgiAIConfiguration config;
+    private GPTPermissionConfiguration config;
 
     @Activate
     @Modified
-    protected void activate(OsgiAIConfiguration configuration) {
+    protected void activate(GPTPermissionConfiguration configuration) {
         this.config = configuration;
         LOG.info("Activated with configuration {}", configuration);
     }
@@ -88,27 +75,8 @@ public class OsgiAIConfigurationPluginImpl implements AIConfigurationPlugin {
 
     @Override
     @Nullable
-    public Set<String> allowedServices(SlingHttpServletRequest request, String contentPath, String editorUrl) {
-        Set<String> allowedServices = new HashSet<>();
-        try {
-            List<String> userAndGroups = userAndGroupsOfUser(request);
-            // A user is allowed if his username or any of the groups he is in matches the allowedUsers regexes and
-            // none of them matches the deniedUsers regexes.
-            boolean userAllowed = false;
-            boolean userDenied = false;
-            for (String userOrGroup : userAndGroups) {
-                userAllowed = userAllowed || matchesAny(userOrGroup, config.allowedUsers());
-                userDenied = userDenied || matchesAny(userOrGroup, config.deniedUsers());
-            }
-            boolean pathAllowed = matchesAny(contentPath, config.allowedPaths()) && !matchesAny(contentPath, config.deniedPaths());
-            boolean viewAllowed = matchesAny(editorUrl, config.allowedViews()) && !matchesAny(editorUrl, config.deniedViews());
-            if (userAllowed && !userDenied && pathAllowed && viewAllowed) {
-                allowedServices.addAll(Arrays.asList(config.services()));
-            }
-        } catch (RepositoryException | RuntimeException e) {
-            LOG.error("Error determining allowed services for {} {} {}", request.getRemoteUser(), contentPath, editorUrl, e);
-        }
-        return allowedServices;
+    public List<GPTPermissionConfiguration> allowedServices(SlingHttpServletRequest request, String contentPath) {
+        return List.of(config);
     }
 
     /**
@@ -118,37 +86,6 @@ public class OsgiAIConfigurationPluginImpl implements AIConfigurationPlugin {
     @Override
     public GPTConfiguration getGPTConfiguration(@Nonnull SlingHttpServletRequest request, @Nullable String contentPath) throws IllegalArgumentException {
         return null;
-    }
-
-    protected List<String> userAndGroupsOfUser(SlingHttpServletRequest request) throws RepositoryException {
-        List<String> authorizableNames = new ArrayList<>();
-        UserManager userManager = request.getResourceResolver().adaptTo(UserManager.class);
-        if (userManager == null) { // fallback for plain Apache Sling
-            JackrabbitSession session = ((JackrabbitSession) request.getResourceResolver().adaptTo(Session.class));
-            userManager = Objects.requireNonNull(session.getUserManager());
-        }
-        Principal userPrincipal = request.getUserPrincipal();
-        authorizableNames.add(userPrincipal.getName());
-        Authorizable user = userManager.getAuthorizable(userPrincipal);
-        if (user instanceof User) {
-            User userInstance = (User) user;
-            Iterator<Group> groups = userInstance.memberOf();
-            while (groups.hasNext()) {
-                authorizableNames.add(groups.next().getID());
-            }
-        }
-        return authorizableNames;
-    }
-
-    protected boolean matchesAny(String value, String[] patterns) {
-        if (patterns != null) {
-            for (String pattern : patterns) {
-                if (value.matches(pattern)) {
-                    return true;
-                }
-            }
-        }
-        return false;
     }
 
 }
